增加提示指导项目页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,9 @@
         android:label="八字排盘"
         android:theme="@style/AppTheme"
         android:name=".common.MyApplication">
+        <activity android:name=".SlideNote">
+
+        </activity>
         <activity android:name=".MainActivity">
         </activity>
         <activity android:name=".ShenSha">
