部分日历功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,10 @@
         android:label="八字排盘"
         android:theme="@style/AppTheme"
         android:name=".common.MyApplication">
+        <activity android:name=".activity.calendar.CalendarCustomization">
+
+
+        </activity>
         <activity android:name=".SlideNote">
 
         </activity>
