--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:22.2.0'
     compile project(':baidu_appx_android_2.0.0')
     compile project(':baidu_cuid')
+    compile project(':mylibrary')
 }
