--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="八字排盘"
+        android:label="@string/ApplicationName"
         android:theme="@style/AppTheme"
         android:name=".common.MyApplication">
         <activity android:name=".activity.calendar.CalendarCustomization">
