--- a/lunar_calendar/build.gradle
+++ b/lunar_calendar/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 19
     buildToolsVersion '19.1.0'
 
     defaultConfig {
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':mylibrary')
+    compile 'com.android.support:support-v4:22.2.0'
 }
