--- a/liuyao/build.gradle
+++ b/liuyao/build.gradle
@@ -21,6 +21,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:22.2.0'
+    compile project(':mylibrary')
 }
