--- a/liuyao/src/main/AndroidManifest.xml
+++ b/liuyao/src/main/AndroidManifest.xml
@@ -7,8 +7,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name=".QiGua"
+        <activity android:windowSoftInputMode="stateHidden"
+            android:name=".HexagramBuilder"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,7 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AnalyzeGua">
+        <activity android:name=".HexagramAnalyzer" android:screenOrientation="landscape">
 
         </activity>
     </application>
