--- a/liuyao/src/main/AndroidManifest.xml
+++ b/liuyao/src/main/AndroidManifest.xml
@@ -8,17 +8,20 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity android:windowSoftInputMode="stateHidden"
-            android:name=".HexagramBuilder"
-            android:label="@string/app_name" >
+            android:name=".HexagramBuilderActivity">
+
+        </activity>
+        <activity android:name=".HexagramAnalyzerActivity" android:screenOrientation="landscape" >
+
+        </activity>
+        <activity android:name=".HexagramListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HexagramAnalyzer" android:screenOrientation="landscape" >
-
-        </activity>
     </application>
-
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 </manifest>
