--- a/liuyao/src/main/AndroidManifest.xml
+++ b/liuyao/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:windowSoftInputMode="stateHidden" android:parentActivityName=".HexagramListActivity"
+        <activity android:windowSoftInputMode="adjustPan" android:parentActivityName=".HexagramListActivity"
             android:name=".HexagramBuilderActivity">
 
         </activity>
