--- a/liuyao/src/main/AndroidManifest.xml
+++ b/liuyao/src/main/AndroidManifest.xml
@@ -7,14 +7,14 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:windowSoftInputMode="adjustPan" android:parentActivityName=".HexagramListActivity"
+        <activity android:windowSoftInputMode="adjustPan" android:parentActivityName=".HexagramListActivity" android:screenOrientation="portrait"
             android:name=".HexagramBuilderActivity">
 
         </activity>
         <activity android:name=".HexagramAnalyzerActivity" android:screenOrientation="landscape" >
 
         </activity>
-        <activity android:name=".HexagramListActivity">
+        <activity android:name=".HexagramListActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
