--- a/liuyao/src/main/AndroidManifest.xml
+++ b/liuyao/src/main/AndroidManifest.xml
@@ -7,8 +7,17 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:windowSoftInputMode="adjustPan" android:parentActivityName=".HexagramListActivity" android:screenOrientation="portrait"
+        <activity android:windowSoftInputMode="adjustPan"
+            android:parentActivityName=".HexagramListActivity"
+            android:screenOrientation="portrait"
             android:name=".HexagramBuilderActivity">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.SEND"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:scheme="date"  />
+            </intent-filter>
 
         </activity>
         <activity android:name=".HexagramAnalyzerActivity" android:screenOrientation="landscape" >
@@ -17,7 +26,6 @@
         <activity android:name=".HexagramListActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
