--- a/liuyao/build.gradle
+++ b/liuyao/build.gradle
@@ -31,11 +31,12 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':mylibrary')
-
     compile 'com.android.support:support-v4:22.2.0'
     compile('com.fortysevendeg.swipelistview:swipelistview:1.0-SNAPSHOT@aar') {
         transitive = true
     }
+    compile project(':baidu_appx_android_2.0.0')
+    compile project(':baidu_cuid')
 }
 
 
