--- a/lunar_calendar/src/main/AndroidManifest.xml
+++ b/lunar_calendar/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ContactAuthor">
+        <activity android:name="lsw.ContactAuthor">
 
         </activity>
 
