--- a/liuyao/build.gradle
+++ b/liuyao/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     }
     compile project(':baidu_appx_android_2.0.0')
     compile project(':baidu_cuid')
+    compile 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
 }
 
 
