--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -21,4 +21,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:22.2.0'
+    compile files('libs/libammsdk.jar')
 }
