--- a/liuyao/build.gradle
+++ b/liuyao/build.gradle
@@ -28,6 +28,7 @@ android {
         }
         debug{
             debuggable true
+            signingConfig signingConfigs.config
         }
     }
     productFlavors {
