--- a/liuyao/src/main/AndroidManifest.xml
+++ b/liuyao/src/main/AndroidManifest.xml
@@ -8,11 +8,12 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
-        <!--<activity-->
-            <!--android:name="weixin.WeiXinEntryActivity"-->
-            <!--android:exported="true"-->
-            <!--android:screenOrientation="portrait"-->
-            <!--android:theme="@android:style/Theme.Translucent.NoTitleBar" />-->
+        <activity
+            android:name=".wxapi.WXEntryActivity"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+        </activity>
 
 
         <activity android:name="lsw.ContactAuthor"></activity>
