Update swipelistview to local, update android support from 19-22

--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -20,6 +20,6 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.android.support:support-v4:19+'
     compile files('libs/libammsdk.jar')
 }
