--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
     defaultConfig {
         applicationId "com.example.swli.myapplication20150519"
         minSdkVersion 15
-        targetSdkVersion 15
+        targetSdkVersion 19
         versionCode 3
         versionName "3.0"
     }
@@ -31,7 +31,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.android.support:support-v4:19+'
     compile project(':baidu_appx_android_2.0.0')
     compile project(':baidu_cuid')
     compile project(':mylibrary')
