--- a/liuyao/build.gradle
+++ b/liuyao/build.gradle
@@ -37,22 +37,23 @@ android {
 
 
 repositories {
-
+    jcenter()
     maven { url 'http://clinker.47deg.com/nexus/content/groups/public' }
 }
 
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':mylibrary')
-    compile 'com.android.support:support-v4:22.2.0'
-    compile('com.fortysevendeg.swipelistview:swipelistview:1.0-SNAPSHOT@aar') {
-        transitive = true
-    }
     compile project(':baidu_appx_android_2.0.0')
     compile project(':baidu_cuid')
     compile 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
     compile project(':BDAutoUpdateSDK_20150605_V1.2.0')
+    compile 'com.android.support:support-v4:19+'
+    //    compile('com.fortysevendeg.swipelistview:swipelistview:1.0-SNAPSHOT@aar') {
+    //        transitive = true
+    //    }
+    compile project(':swipelistview')
 }
 
 
