--- a/liuyao/src/main/AndroidManifest.xml
+++ b/liuyao/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
 
         </activity>
         <activity android:name=".HexagramAnalyzerActivity" android:screenOrientation="landscape" >
-
+        </activity>
+        <activity android:name=".HexagramImportActivity" android:screenOrientation="portrait" android:parentActivityName=".HexagramListActivity">
         </activity>
         <activity android:name=".HexagramListActivity" android:screenOrientation="portrait">
             <intent-filter>
@@ -43,36 +44,36 @@
         </activity>
 
         <!-- 移动云AppX SDK -->
-        <activity android:name="com.baidu.appx.ui.BDInnerBrowser"/>
-        <receiver android:name="com.baidu.appx.app_download.CompleteReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
-                <action android:name="android.intent.action.DOWNLOAD_NOTIFICATION_CLICKED"/>
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.PACKAGE_ADDED"/>
-                <data android:scheme="package"/>
-                <!-- 注意！！ 这句必须要加，否则接收不到安装完成广播 -->
-            </intent-filter>
-        </receiver>
+        <!--<activity android:name="com.baidu.appx.ui.BDInnerBrowser"/>-->
+        <!--<receiver android:name="com.baidu.appx.app_download.CompleteReceiver">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>-->
+                <!--<action android:name="android.intent.action.DOWNLOAD_NOTIFICATION_CLICKED"/>-->
+            <!--</intent-filter>-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.PACKAGE_ADDED"/>-->
+                <!--<data android:scheme="package"/>-->
+                <!--&lt;!&ndash; 注意！！ 这句必须要加，否则接收不到安装完成广播 &ndash;&gt;-->
+            <!--</intent-filter>-->
+        <!--</receiver>-->
 
         <meta-data android:name="BDAPPID" android:value="6690595"/>
         <meta-data android:name="BDAPPKEY" android:value="N5Qtkxs3hNF0bLVmGgwM6pmo"/>
 
-        <activity android:name="com.baidu.autoupdatesdk.ConfirmDialoigActivity"
-            android:screenOrientation="sensor"
-            android:exported="false"
-            android:theme="@style/bdp_update_dialog_style_fullscreen" />
+        <!--<activity android:name="com.baidu.autoupdatesdk.ConfirmDialoigActivity"-->
+            <!--android:screenOrientation="sensor"-->
+            <!--android:exported="false"-->
+            <!--android:theme="@style/bdp_update_dialog_style_fullscreen" />-->
 
-        <receiver android:name="com.baidu.autoupdatesdk.receiver.BDBroadcastReceiver"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.baidu.autoupdatesdk.ACTION_NEW_UPDATE"/>
-                <action android:name="com.baidu.autoupdatesdk.ACTION_DOWNLOAD_COMPLETE"/>
-                <action android:name="com.baidu.autoupdatesdk.ACTION_NEW_AS"/>
-                <action android:name="com.baidu.autoupdatesdk.ACTION_AS_DOWNLOAD_COMPLETE"/>
-            </intent-filter>
-        </receiver>
+        <!--<receiver android:name="com.baidu.autoupdatesdk.receiver.BDBroadcastReceiver"-->
+            <!--android:exported="false">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="com.baidu.autoupdatesdk.ACTION_NEW_UPDATE"/>-->
+                <!--<action android:name="com.baidu.autoupdatesdk.ACTION_DOWNLOAD_COMPLETE"/>-->
+                <!--<action android:name="com.baidu.autoupdatesdk.ACTION_NEW_AS"/>-->
+                <!--<action android:name="com.baidu.autoupdatesdk.ACTION_AS_DOWNLOAD_COMPLETE"/>-->
+            <!--</intent-filter>-->
+        <!--</receiver>-->
 
     </application>
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
