--- a/liuyao/build.gradle
+++ b/liuyao/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     //        transitive = true
     //    }
     compile project(':swipelistview')
-    //compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
 
 
