--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -22,4 +22,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:19+'
     compile files('libs/libammsdk.jar')
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
