--- a/liuyao/build.gradle
+++ b/liuyao/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     //    }
     compile project(':swipelistview')
 
+    compile 'net.simonvt.menudrawer:menudrawer:3.0.6'
+
 }
 
 
