--- a/liuyao/build.gradle
+++ b/liuyao/build.gradle
@@ -53,9 +53,11 @@ dependencies {
     //    compile('com.fortysevendeg.swipelistview:swipelistview:1.0-SNAPSHOT@aar') {
     //        transitive = true
     //    }
-    compile project(':swipelistview')
+//    compile project(':swipelistview')
 
     compile 'net.simonvt.menudrawer:menudrawer:3.0.6'
+
+    compile "com.daimajia.swipelayout:library:1.2.0@aar"
 
 }
 
