让万年历可以查询六爻数据库

--- a/lunar_calendar/build.gradle
+++ b/lunar_calendar/build.gradle
@@ -35,9 +35,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'net.simonvt.menudrawer:menudrawer:3.0.6'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':mylibrary')
     compile 'com.android.support:support-v4:22.2.0'
+
     compile project(':baidu_appx_android_2.0.0')
     compile project(':baidu_cuid')
+
+
 }
