--- a/liuyao/src/main/AndroidManifest.xml
+++ b/liuyao/src/main/AndroidManifest.xml
@@ -33,6 +33,13 @@
 
         </activity>
         <activity android:name=".HexagramAnalyzerActivity" android:screenOrientation="landscape" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.SEND"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+
         </activity>
         <activity android:name=".HexagramImportActivity" android:screenOrientation="portrait" android:parentActivityName=".HexagramListActivity">
         </activity>
