配置月份是以周六开始还是周一开始

--- a/lunar_calendar/src/main/AndroidManifest.xml
+++ b/lunar_calendar/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="lsw.lunar_calendar" >
 
     <application
+        android:name=".common.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,8 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Setting" android:parentActivityName=".Month">
+        </activity>
         <activity android:name="lsw.ContactAuthor">
-
         </activity>
 
         <!-- 移动云AppX SDK -->
