--- a/lunar_calendar/src/main/AndroidManifest.xml
+++ b/lunar_calendar/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         </activity>
         <activity android:name=".Setting" android:parentActivityName=".Month">
         </activity>
+        <activity android:name=".RelevantNote" android:parentActivityName=".Month">
+        </activity>
         <activity android:name="lsw.ContactAuthor">
         </activity>
 
