--- a/lunar_calendar/build.gradle
+++ b/lunar_calendar/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     compile project(':baidu_cuid')
 
     compile 'net.simonvt.menudrawer:menudrawer:3.0.6'
+    compile 'com.android.support:support-v4:23.1.1'
 }
