日历八字六爻挂关系

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.SEND"/>
             </intent-filter>
         </activity>
         <service android:name=".common.TimerServiceCustomize" android:enabled="true" android:process=":remote"></service>
